# demiurge-assistant

./: .env.example  .gitignore  ChatView.tsx  DetectiveBoardView.tsx  LICENSE  LanguageContext.tsx  MarkdownEditor.tsx  QuestBoardView.tsx  README.md  RandomTablesView.tsx  api.test.ts  index.html  index.ts  metadata.json  package-lock.json  package.json  pyproject.toml  server.ts  start.bat  start.sh  start_worldbuilder.bat  test.js  tsconfig.json  vite.config.ts
docs/: ARCHITECTURE.md  LLM.md  RAG.md  ROADMAP.md  UI.md  WRITE_BACK.md
frontend/: README.md  index.html  package.json  vite.config.js
frontend/src/: App.js  api.js  main.js  styles.css
src/: App.tsx  api.test.ts  api.ts
src/components/: ChatView.tsx  GraphView.tsx  HelpView.tsx  MapView.tsx  MarkdownEditor.tsx  QuestBoardView.tsx  RandomTablesView.tsx  SectionHelp.tsx  SettingsView.tsx  TimelineView.tsx  WikiView.tsx
src/contexts/: PlayerModeContext.tsx  UndoContext.tsx
src/db/: index.ts
src/i18n/: LanguageContext.tsx  en.ts  ru.ts
src/server/: api.ts
src/worldbuilder_core/: __init__.py  config.py  db.py  main.py  models.py  schemas.py
src/worldbuilder_core/api/: deps.py
src/worldbuilder_core/api/routes/: assets.py  entities.py  import_export.py  llm.py  proposals.py  relationships.py  retrieval.py  world_rules.py  worlds.py
src/worldbuilder_core/services/: extraction.py  import_export.py  llm.py  llm_settings.py  proposals.py  retrieval.py  world_chat.py
src/worldbuilder_core/static/: app.js  index.html  styles.css
tests/: test_api.py  test_extraction.py  test_llm.py
(+10 files in other folders)
