[project]
name = "worldbuilder-core"
version = "0.1.0"
description = "Modular LLM-wiki core for living fictional worlds."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "sqlalchemy>=2.0.30",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worldbuilder_core"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
